--- a/index style.css
+++ b/index style.css
@@ -51,3 +51,14 @@ h2 {
   font-size: 1rem;
   text-align: center;
 }
+
+#Main_text Difficulty_select_button {
+  display: inline-block;
+  min-width: 9rem;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  border: solid 1px #aaa;
+  text-align: center;
+  text-decoration: none;
+  color: #555;
+}
