--- a/index style.css
+++ b/index style.css
@@ -28,12 +28,12 @@ nav a {
   border: solid 1px #aaa;
   text-align: center;
   text-decoration: none;
-  color: #555;
+  color: #000;
 }
 
 nav a[aria-current='page'] {
   color: #000;
-  background-color: #d4d4d4;
+  background-color: rgb(0, 83, 135)212, 212;
 }
 
 main {
