--- a/index style.css
+++ b/index style.css
@@ -54,10 +54,14 @@ h2 {
 
 #Play_snake_button {
   display: inline-block;
-  size: 5rem;
+  font-size: 5rem;
+  font-family: system-ui, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #Main_text {
   display: inline-block;
   text-align: center;
+  font-family: system-ui, sans-serif;
 }
