--- a/index style.css
+++ b/index style.css
@@ -65,3 +65,9 @@ h2 {
   text-align: center;
   font-family: system-ui, sans-serif;
 }
+
+#Main_text h3 {
+  display: inline-block;
+  text-align: center;
+  font-family: system-ui, sans-serif;
+}
