--- a/index style.css
+++ b/index style.css
@@ -63,6 +63,7 @@ h2 {
 #Main_text {
   margin: 0;
   display: inline-block;
+  align-items: center;
   text-align: center;
   font-family: system-ui, sans-serif;
 }
