--- a/index style.css
+++ b/index style.css
@@ -53,12 +53,12 @@ h2 {
 }
 
 #Play_snake_button {
-  display: inline-block;
+  position: absolute;
   align-self: center;
   font-size: 5rem;
   font-family: system-ui, sans-serif;
-  margin-left: auto;
-  margin-right: auto;
+  top: 50%;
+  transform: translateX(-50%);
 }
 
 #Main_text {
@@ -68,4 +68,5 @@ h2 {
   align-items: center;
   text-align: center;
   font-family: system-ui, sans-serif;
+  position: relative;
 }
