--- a/index style.css
+++ b/index style.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
-  color: black;
+  color: white;
   background-color: #2b2b2b;
   text-align: center;
 }
