--- a/index style.css
+++ b/index style.css
@@ -29,11 +29,11 @@ nav a {
   border: solid 1px #aaa;
   text-align: center;
   text-decoration: none;
-  color: #000;
+  color: white;
 }
 
 nav a[aria-current='page'] {
-  color: #000;
+  color: white;
   background-color: rgb(0, 83, 135);
 }
 
