--- a/difficulty select style.css
+++ b/difficulty select style.css
@@ -6,7 +6,7 @@
     margin: 0;
     font-family: system-ui, sans-serif;
     color: black;
-    background-color: white;
+    background-color: #2b2b2b;
   }
   
   nav {
@@ -28,11 +28,11 @@
     border: solid 1px #aaa;
     text-align: center;
     text-decoration: none;
-    color: #555;
+    color: white;
   }
   
   nav a[aria-current='page'] {
-    color: #000;
+    color: white;
     background-color: #d4d4d4;
   }
   
