--- a/difficulty select style.css
+++ b/difficulty select style.css
@@ -7,6 +7,7 @@
     font-family: system-ui, sans-serif;
     color: black;
     background-color: #2b2b2b;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   nav {
@@ -50,4 +51,10 @@
     font-weight: bold;
     font-size: 1rem;
     text-align: center;
+  }
+
+  #buttons snake-easy_play, snake-medium_play, snake-hard_play, snake-extreme_play {
+    align-self: center;
+    font-size: 5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
