--- a/index style.css
+++ b/index style.css
@@ -8,6 +8,7 @@ body {
   color: white;
   background-color: #2b2b2b;
   text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav {
@@ -57,7 +58,7 @@ h2 {
   /* position: absolute; Remove this line */
   align-self: center;
   font-size: 5rem;
-  font-family: system-ui, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* top: 50%; Remove this line */
   /* transform: translateX(-50%); Remove this line */
   margin-top: 20px; /* Add this line to create space above the button */
@@ -69,6 +70,6 @@ h2 {
   display: inline-block;
   align-items: center;
   text-align: center;
-  font-family: system-ui, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* position: relative; Remove this line */
 }
