--- a/difficulty-select-style.css
+++ b/difficulty-select-style.css
@@ -34,11 +34,12 @@
   
   nav a[aria-current='page'] {
     color: white;
-    background-color: #d4d4d4;
+    background-color: rgb(0, 83, 135);
   }
   
   main {
     padding: 1rem;
+    color: white;
   }
   
   h1 {
@@ -53,8 +54,9 @@
     text-align: center;
   }
 
-  #buttons snake-easy_play, snake-medium_play, snake-hard_play, snake-extreme_play {
+  #buttons {
     align-self: center;
-    font-size: 5rem;
+    font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: inline-block;
   }
