--- a/difficulty-select-style.css
+++ b/difficulty-select-style.css
@@ -54,9 +54,22 @@
     text-align: center;
   }
 
-  #buttons {
-    align-self: center;
+  #snake-hard_play, #snake-medium_play, #snake-easy_play, #snake-extreme_play {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: inline-block;
+  }
+
+  #buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px; /* Adjust this value to increase or decrease the space between the buttons */
   }
