--- a/index-style.css
+++ b/index-style.css
@@ -57,11 +57,16 @@ h2 {
 #Play_snake_button {
   /* position: absolute; Remove this line */
   align-self: center;
-  font-size: 5rem;
+  font-size: 70px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* top: 50%; Remove this line */
   /* transform: translateX(-50%); Remove this line */
   margin-top: 20px; /* Add this line to create space above the button */
+  background-color: #04AA6D;
+  border-radius: 8px;
+  color: white;
+  border: none;
+  padding: 12px 28px;
 }
 
 #Main_text {
