--- a/difficulty-select-style.css
+++ b/difficulty-select-style.css
@@ -55,17 +55,23 @@
   }
 
   #snake-hard_play, #snake-medium_play, #snake-easy_play, #snake-extreme_play {
-    background-color: #04AA6D; /* Green */
+    background-color: white;
     border: none;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
     border-radius: 8px;
+    transition-duration: 0.4s;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
+  #snake-hard_play:hover, #snake-medium_play:hover, #snake-easy_play:hover, #snake-extreme_play:hover {
+    background-color: #04AA6D; /* Green */
+    color: white;
+  } 
 
   #buttons {
     display: flex;
