--- a/difficulty-select-style.css
+++ b/difficulty-select-style.css
@@ -5,7 +5,7 @@
   body {
     margin: 0;
     font-family: system-ui, sans-serif;
-    color: black;
+    color: rgb(255, 255, 255);
     background-color: #2b2b2b;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
@@ -79,4 +79,10 @@
     align-items: center;
     justify-content: center;
     gap: 10px; /* Adjust this value to increase or decrease the space between the buttons */
+  }
+
+  footer {
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
