--- a/index-style.css
+++ b/index-style.css
@@ -84,3 +84,7 @@ h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* position: relative; Remove this line */
 }
+
+#Main_text h4 {
+  color: rgb(255, 71, 71);
+}
