--- a/difficulty-select-style.css
+++ b/difficulty-select-style.css
@@ -8,6 +8,9 @@
     color: rgb(255, 255, 255);
     background-color: #2b2b2b;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
   }
   
   nav {
@@ -81,8 +84,20 @@
     gap: 10px; /* Adjust this value to increase or decrease the space between the buttons */
   }
 
-  footer {
-    align-items: center;
-    display: flex;
+  #footer {
+    margin-top: auto;
+    color: rgb(0, 110, 255);
+    font-size: 18px;
+    text-shadow: #7118ff;
+    background-color: rgb(0, 0, 0);
     justify-content: center;
+    display: inline-block;
+    align-items: center;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
+  #footer a {
+    color: rgb(0, 110, 255);
+  }
+  
