--- a/snake-online-updating/mobile-device.css
+++ b/snake-online-updating/mobile-device.css
@@ -57,27 +57,6 @@ h2 {
   text-align: center;
 }
 
-#Play_snake_button {
-  /* position: absolute; Remove this line */
-  align-self: center;
-  font-size: 70px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  /* top: 50%; Remove this line */
-  /* transform: translateX(-50%); Remove this line */
-  margin-top: 20px; /* Add this line to create space above the button */
-  background-color: white;
-  border-radius: 8px;
-  color: black;
-  border: none;
-  padding: 12px 28px;
-  transition-duration: 0.4s;
-}
-
-#Play_snake_button:hover {
-  background-color: #04AA6D;
-  color: white;
-}
-
 #Main_text {
   margin: 0;
   justify-content: center;
@@ -88,7 +67,7 @@ h2 {
   /* position: relative; Remove this line */
 }
 
-#Main_text h4 {
+#Main_text {
   color: rgb(255, 71, 71);
 }
 
